Improve performance and fix issues
- Add Cache Control to static files and dynamic pages
- Add Content Encoding to compress delivered content
- Update reset.css to avoid downloading fonts
- Reduce logo image sizes
- Remove redundant CSS declarations
- Fix design issue of comments overflowing parent elements

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,11 +13,10 @@
   grid-template-rows: auto 1fr auto;
 }
 
-/*------------------------------
-HEADER
-------------------------------*/
+/* Site Header */
 
 .header {
+  width: 100%;
   padding: 1rem 0;
   background-color: var(--white);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -42,6 +41,7 @@ HEADER
   display: flex;
   flex-direction: row;
   align-items: center;
+  gap: 0.5rem;
   padding: 0.25rem 0.75rem 0.25rem 0.25rem;
   background-color: var(--white);
   border: 1px solid rgba(0, 0, 0, 0.25);
@@ -57,18 +57,16 @@ HEADER
     color: var(--black);
     font-size: 1.25rem;
     font-weight: 700;
-    font-family: "Ubuntu";
   }
 }
 
 .navbar {
-  font-family: "Ubuntu";
-  font-size: 1rem;
   font-weight: 500;
 
   & .navbar__links {
     display: flex;
     flex-direction: row;
+    margin-bottom: 0;
     padding-left: 0;
 
     & > li {
@@ -80,6 +78,7 @@ HEADER
     display: block;
     padding: 0.5rem 1.25rem;
     border-radius: 0.25rem;
+    color: var(--black);
     text-decoration: none;
 
     @media (min-width: 768px) {
@@ -93,11 +92,10 @@ HEADER
   }
 }
 
-/*------------------------------
-ARTICLES
-------------------------------*/
+/* Feed Items */
 
 .main {
+  min-width: 0;
   padding: 3rem 0;
 }
 
@@ -136,14 +134,12 @@ ARTICLES
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  font-family: "Ubuntu";
   list-style-type: none;
 
   & .article__title {
     color: var(--black);
     font-size: 1.25rem;
     font-weight: 700;
-    line-height: 1.5;
     text-decoration: none;
     transition: transform 0.2s;
   }
@@ -155,7 +151,6 @@ ARTICLES
   & .article__domain {
     color: var(--gray);
     font-size: 0.85rem;
-    font-weight: 400;
   }
 
   & .article__metadata {
@@ -186,9 +181,7 @@ ARTICLES
     padding: 0.5rem 0.75rem;
     background-color: var(--white);
     border: 1px solid var(--gray);
-    font-family: "Ubuntu";
-    font-size: 1rem;
-    font-weight: 400;
+    color: var(--black);
     list-style-type: none;
     text-decoration: none;
   }
@@ -208,9 +201,7 @@ ARTICLES
   }
 }
 
-/*------------------------------
-PAGE & ITEM
-------------------------------*/
+/* Item Pages */
 
 .item-page {
   & > .item > .item--comment {
@@ -221,10 +212,8 @@ PAGE & ITEM
 .item-page__title {
   margin-bottom: 3rem;
   color: var(--black);
-  font-family: "Ubuntu";
   font-size: 2rem;
   font-weight: 700;
-  line-height: 1.5;
 }
 
 .item {
@@ -233,7 +222,6 @@ PAGE & ITEM
   & .item__metadata {
     margin-bottom: 3rem;
     color: var(--light-black);
-    font-family: "Ubuntu";
     font-weight: 300;
   }
 
@@ -244,38 +232,30 @@ PAGE & ITEM
   & .item__source {
     margin-bottom: 3rem;
     color: var(--black);
-    font-family: "Ubuntu";
-    font-weight: 400;
   }
 
   & .item__content {
     margin-bottom: 3rem;
     color: var(--black);
-    font-family: "Ubuntu";
     font-weight: 400;
     line-height: 2;
 
-    & p {
-      margin-bottom: 1rem;
-    }
-
-    & p:last-child {
+    & :last-child {
       margin-bottom: 0;
     }
   }
 
   & .item__comment-count {
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
     color: var(--gray);
-    font-family: "Ubuntu";
     font-weight: 300;
   }
 }
 
 .item--comment {
-  border-left: 1px solid var(--light-gray);
+  border-left: 1px dashed var(--light-gray);
   padding-left: 0.5rem;
-  margin-left: 2rem;
+  margin-left: 1rem;
   font-size: 0.875rem;
 
   & .item__metadata {
@@ -283,14 +263,12 @@ PAGE & ITEM
   }
 
   & .item__content {
-    margin-bottom: 2rem;
-    line-height: 1.5;
+    margin-bottom: 1rem;
+    line-height: 1.25;
   }
 }
 
-/*------------------------------
-FOOTER
-------------------------------*/
+/* Site Footer */
 
 .footer {
   padding: 2rem 0;
