--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -1,38 +1,149 @@
+:root {
+  --sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif;
+  --monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
 *, *::before, *::after {
   box-sizing: border-box;
+}
+
+* {
   margin: 0;
-  padding: 0;
 }
 
-html, body {
+@media (prefers-reduced-motion: no-preference) {
+  :root {
+    scroll-behavior: smooth;
+  }
+}
+
+body {
   width: 100%;
-}
-
-html {
-  color: #18191a;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
+  color: #212529;
+  font-family: var(--sans-serif);
+  font-size: 1rem;
   font-weight: 400;
-  line-height: 1.125;
+  line-height: 1.5;
 }
 
-a {
-  color: inherit;
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
 }
 
-img {
+img, picture, video, canvas, svg {
   display: block;
   max-width: 100%;
+}
+
+hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.25);
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 0.5rem;
+  line-height: 1.2;
+  word-wrap: break-word;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.75rem;
+}
+
+h4 {
+  font-size: 1.5rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+
+h6 {
+  font-size: 1rem;
+}
+
+p {
+  margin-bottom: 1rem;
+  word-wrap: break-word;
+}
+
+address {
+  margin-bottom: 1rem;
+  font-style: normal;
 }
 
 ol, ul {
+  margin-bottom: 1rem;
   padding-left: 2rem;
 }
 
-code {
+blockquote {
+  margin-bottom: 1rem;
+}
+
+b, strong {
+  font-weight: bolder;
+}
+
+small {
+  font-size: 0.875em;
+}
+
+a {
+  color: #0d6efd;
+  text-decoration: underline;
+}
+
+a:hover {
+  color: #0a58ca;
+}
+
+pre, code {
+  font-family: var(--monospace);
+  font-size: 1em;
+}
+
+pre {
   display: block;
-  max-width: 100%;
+  margin-bottom: 1rem;
   overflow: auto;
+}
+
+code {
+  word-wrap: break-word;
+}
+
+figure {
+  margin-bottom: 1rem;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+input, button, select, optgroup, textarea {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
+select {
+  word-wrap: normal;
+}
+
+textarea {
+  resize: vertical;
 }
 
 /* Breakpoints and Container */
@@ -41,6 +152,12 @@ code {
   width: 100%;
   margin: auto;
   padding: 0 1rem;
+}
+
+@media (min-width: 576px) {
+  .container {
+    width: 540px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -52,6 +169,12 @@ code {
 @media (min-width: 992px) {
   .container {
     width: 960px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1140px;
   }
 }
 
